--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:theme="@style/Theme.ComposeTutorial"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Modifiers"
+            android:exported="false"
+            android:label="@string/title_activity_modifiers"
+            android:theme="@style/Theme.ComposeTutorial" />
+        <activity
+            android:name=".RowsColumnsAndSizing"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeTutorial">
